# cayde

./: .gitignore  .gitmodules  README.md  build_mel.py  encoder.py  ikora.py  main.py  model.py  train.py  trainer.py
checkpoints/: checkpoint  ckpt-0.index  ckpt-1.index  ckpt-2.index  ckpt-3.index  ckpt-4.index  ckpt-5.index  ckpt-8.index  ckpt-9.index  ckpt1.index
models/: ags.py  gcmfcc.py  kgcmfcc.py  procedia.py
sundance/: Cargo.toml
sundance/src/: builders.rs  encoders.rs  lib.rs  main.rs
util/: fetcher.py  fmt.py  install_sundance.py
wrangling/: encoder.py  fetcher.py  preprocessing.py  preprocessors.py  setfetch.py  view.py  wrangler.py
