[package]
name = "sundance"
version = "0.1.0"
edition = "2021"

[lib]
name = "sundance"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "sundance-encoder"
path = "src/main.rs"

[dependencies]
argh = "0.1.9"
image = "0.24.5"
ndarray = "0.15.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
walkdir = "2.3.2"
pretty_env_logger = "0.4.0"
log = "0.4.14"

[build-dependencies]
anyhow = "*"
